--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "csv-stringify": "^6.5.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "yargs": "^17.0.1"
   },
   "author": "",
   "license": "MIT"
-} 
+}
